--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
           <div class="modal-input-wrap">
             <input type="text" name="user-name" class="modal-input" required id="user-name" />
             <svg class="input-icon" width="18" height="18">
-              <use href="/images/sprite_images/icons.svg#icon-person-modal">
+              <use href="./images/sprite_images/icons.svg#icon-person-modal">
               </use>
             </svg>
           </div>
@@ -461,7 +461,7 @@
           <div class="modal-input-wrap">
             <input type="tel" name="user-tel" class="modal-input" required id="user-tel" />
             <svg class="input-icon" width="18" height="18">
-              <use href="/images/sprite_images/icons.svg#icon-phone-modal">
+              <use href="./images/sprite_images/icons.svg#icon-phone-modal">
               </use>
             </svg>
           </div>
@@ -471,7 +471,7 @@
           <div class="modal-input-wrap">
             <input type="email" name="user-email" class="modal-input" required id="user-email" />
             <svg class="input-icon" width="18" height="18">
-              <use href="/images/sprite_images/icons.svg#icon-email-modal">
+              <use href="./images/sprite_images/icons.svg#icon-email-modal">
               </use>
             </svg>
           </div>
@@ -483,9 +483,12 @@
           </div>
           <div class="modal-form-field-checkbox">
             <label class="modal-form-checkbox" for="terms-of-use">
+              <!--<svg class="checkbox-icon" width="16" height="15">
+                <use href="./images/sprite_images/icons.svg#icon-check"></use>
+              </svg>-->
               <span>Соглашаюсь с рассылкой и принимаю <a href="" class="acceptance-link"> Условия договора</a></span>
             </label>
-            <input type="checkbox" class="form-checkbox visually-hidden" name="acceptance" value="terms-of-use"
+            <input type="checkbox" class="form-checkbox visually-hidden" name="acceptance" value="accept"
               id="terms-of-use" />
           </div>
           <button type="submit" class="modal-button">Отправить</button>
